--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,16 +5,6 @@ description: A new Flutter project.
 # pub.dev using `pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-# The following defines the version and build number for your application.
-# A version number is three numbers separated by dots, like 1.2.43
-# followed by an optional build number separated by a +.
-# Both the version and the builder number may be overridden in flutter
-# build by specifying --build-name and --build-number, respectively.
-# In Android, build-name is used as versionName while build-number used as versionCode.
-# Read more about Android versioning at https://developer.android.com/studio/publish/versioning
-# In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
-# Read more about iOS versioning at
-# https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 version: 1.0.0+1
 
 environment:
@@ -23,13 +13,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_svg: ^0.22.0
   hexcolor: ^2.0.4
+  table_calendar: ^3.0.0
+  intl: ^0.17.0
+  flutter_bloc: ^7.0.1
+  rxdart: ^0.27.1
 
 dev_dependencies:
   flutter_test:
@@ -69,9 +59,4 @@ flutter:
     - family: Proxima Nova
       fonts:
         - asset: fonts/ProximaNova-Regular.ttf
-    # - family: Proxima Nova Bold
-    #   fonts:
-    #     - asset: fonts/Proxima Nova/Proxima Nova Bold.ttf
-  #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/custom-fonts/#from-packages
+
