--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,42 +16,23 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_svg: ^0.22.0
   hexcolor: ^2.0.4
-  table_calendar: ^3.0.0
   intl: ^0.17.0
   flutter_bloc: ^7.0.1
   rxdart: ^0.27.1
+  simple_gesture_detector: ^0.2.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
-
-# The following section is specific to Flutter.
 flutter:
 
-  # The following line ensures that the Material Icons font is
-  # included with your application, so that you can use the icons in
-  # the material Icons class.
   uses-material-design: true
 
-  # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
     - assets/icons/
 
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/assets-and-images/#resolution-aware.
-
-  # For details regarding adding assets from package dependencies, see
-  # https://flutter.dev/assets-and-images/#from-packages
-
-  # To add custom fonts to your application, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
   fonts:
     - family: Bebas Neue
       fonts:
@@ -59,4 +40,3 @@ flutter:
     - family: Proxima Nova
       fonts:
         - asset: fonts/ProximaNova-Regular.ttf
-
