--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,7 +22,7 @@ dependencies:
   simple_gesture_detector: ^0.2.0
   sqflite: ^2.0.0+3
   path_provider: ^2.0.2
-  equatable: ^2.0.3
+  sizer: ^2.0.13
 
 dev_dependencies:
   flutter_test:
