--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   path_provider: ^2.0.2
   carousel_slider: ^4.0.0
   syncfusion_flutter_charts: ^19.2.44+1
+  image_picker: ^0.8.1+3
 
 dev_dependencies:
   flutter_test:
