--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,8 +2,12 @@
     package="com.example.hooa">
 
     <permission android:name="android.permission.CAMERA"/>
+    <permission android:name="android.permission.INTERNET"/>
+    <permission android:name="android.permission.SEND_SMS"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
-   <application
+    <application
         android:label="hooa"
         android:icon="@mipmap/ic_launcher">
         <activity
