--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.2
   flutter_svg: ^0.22.0
-  hexcolor: ^2.0.4
+  hexcolor: ^2.0.5
   intl: ^0.17.0
   flutter_bloc: ^7.0.1
   rxdart: ^0.27.1
@@ -25,6 +25,10 @@ dependencies:
   carousel_slider: ^4.0.0
   syncfusion_flutter_charts: ^19.2.44+1
   image_picker: ^0.8.1+3
+  flutter_map: ^0.14.0
+  sms: ^0.2.0
+  pin_code_text_field: ^1.8.0
+  geocoder: ^0.2.1
 
 dev_dependencies:
   flutter_test:
@@ -37,6 +41,7 @@ flutter:
   assets:
     - assets/
     - assets/icons/
+    - assets/images/
 
   fonts:
     - family: Bebas Neue
